--- a/src/main/webapp/app/components/paper/list.html
+++ b/src/main/webapp/app/components/paper/list.html
@@ -11,9 +11,15 @@
         <h3>
             <div class="col-xs-9">Paper List</div>
             <div class="input-group custom-search-form col-xs-3">
-                <input class="form-control" type="text" placeholder="Search..." ng-model="search"
-                       ng-keyup="searchQuery()">
-                        <span class="input-group-addon">
+                <input type="text"
+                       ng-model="paper.search"
+                       ng-keyup="paper.searchQuery($event)"
+                       name="topicName"
+                       placeholder="Search..."
+                       required="required"
+                       uib-typeahead="topic for topic in paper.topics | filter:$viewValue | limitTo:8"
+                       class="form-control">
+                 <span class="input-group-addon">
                             <i class="fa fa-search"></i>
                         </span>
             </div>
