--- a/src/main/webapp/app/components/session/list.html
+++ b/src/main/webapp/app/components/session/list.html
@@ -13,9 +13,15 @@
             <div class="input-group custom-search-form col-xs-5">
 
 
-                <input class="form-control" type="text" placeholder="Search..." ng-model="search"
-                       ng-keyup="searchQuery()">
-                        <span class="input-group-addon">
+                <input type="text"
+                       ng-model="session.search"
+                       ng-keyup="session.searchQuery($event)"
+                       name="topicName"
+                       placeholder="Search..."
+                       required="required"
+                       uib-typeahead="topic for topic in session.topics | filter:$viewValue | limitTo:8"
+                       class="form-control">
+                 <span class="input-group-addon">
                             <i class="fa fa-search"></i>
                         </span>
                     <select class="form-control" ng-change="session.findAllSessionBySessionStat()" ng-model="session.sessionStat">
@@ -55,6 +61,16 @@
                         <blockquote>
                             <small>Agenda <span ng-show="sessionJSON.intellimeet!=null">({{sessionJSON.intellimeet.intellimeetDate}})</span></small>
                             <p>{{sessionJSON.paper.agenda}}</p>
+                            <small>Status:
+                                <ul class="list-style-type-none">
+                                    <li>
+                                        <small>
+                                            {{sessionJSON.sessionStat}}
+                                        </small>
+                                    </li>
+                                </ul>
+                            </small>
+
                             <small>
                                 Presenter:- &nbsp;
                                 <a href=""
