implement the pagination when user search the session in session list page

--- a/src/main/webapp/app/components/session/list.html
+++ b/src/main/webapp/app/components/session/list.html
@@ -67,7 +67,7 @@
                                 <ul class="list-style-type-none">
                                     <li>
                                         <small>
-                                           {{sessionJSON.sessionStat}}
+                                           {{sessionJSON.sessionStatValue}}
                                         </small>
                                     </li>
                                 </ul>
