--- a/src/main/webapp/app/components/topic/list.html
+++ b/src/main/webapp/app/components/topic/list.html
@@ -10,9 +10,15 @@
         <h3>
             <div class="col-xs-9">Topic List</div>
             <div class="input-group custom-search-form col-xs-3">
-                <input class="form-control" type="text" placeholder="Search..." ng-model="search"
-                       ng-keyup="searchQuery()">
-                        <span class="input-group-addon">
+                <input type="text"
+                       ng-model="topic.search"
+                       ng-keyup="topic.searchQuery($event)"
+                       name="topicName"
+                       placeholder="Search..."
+                       required="required"
+                       uib-typeahead="topic for topic in topic.topicName | limitTo:8"
+                       class="form-control">
+                 <span class="input-group-addon">
                             <i class="fa fa-search"></i>
                         </span>
             </div>
@@ -21,7 +27,7 @@
     <div class="main-content">
         <div class="panel panel-default">
             <!--<div class="panel-heading"> Blockquotes </div>-->
-            <div class="panel-body" ng-repeat="topicJSON in topic.topics|filter:search">
+            <div class="panel-body" ng-repeat="topicJSON in topic.topics">
                 <h3 class="text-info">{{topicJSON.name}}
                     <img src="{{topicJSON.imageSrc}}" class="pull-right" width="75px" height="75px">
                 </h3>
