--- a/src/main/webapp/app/components/paper/list.html
+++ b/src/main/webapp/app/components/paper/list.html
@@ -72,7 +72,7 @@
 
                 <blockquote>
                     <small>Agenda</small>
-                    <p>{{paperJSON.agenda}}</p>
+                    <p ng-bind-html="paperJSON.agenda"></p>
                     <small>
                         Given By:-<cite title="Source Title"> {{paperJSON.givenBy}}</cite>
                     </small>
@@ -130,31 +130,15 @@
                             </select>
                             <br>
                             <label class="text-muted">Agenda</label>
-                                <!--<textarea required="required"-->
-                                          <!--name="agenda"-->
-                                          <!--class="form-control"-->
-                                          <!--cols="100"-->
-                                          <!--ng-minlength="100"-->
-                                          <!--rows="15"-->
-                                          <!--spellcheck="true"-->
-                                          <!--placeholder="Agenda Minimum 100 Character"-->
-                                          <!--ng-model="paper.agenda">-->
-                                <!--</textarea>-->
 
                             <br>
 
 
                             <div class="container lighter" style="width:105%;margin-left:-20px;">
-                                <div text-angular ng-model="htmlContent"
-                                     name="demo-editor"
+                                <div text-angular ng-model="paper.agenda"
+                                     name="agenda"
                                      ta-text-editor-class="border-around container"
                                      ta-html-editor-class="border-around">
-                                </div>
-                            </div>
-                            <br>
-                            <div class="container text-center lighter border-around">
-                                <div  class="lighter roboto">
-                                    <p ng-bind="htmlContent" class="text-left text-med text-gray"></p>
                                 </div>
                             </div>
                             <br>
@@ -201,7 +185,7 @@
                         <button class="btn btn-danger"
                                 type="button"
                                 ng-click="paper.saveNewPaper(paper.topicId)"
-                                ng-disabled="paperForm.email.$invalid ||paperForm.topicName.$invalid ||paperForm.agenda.$invalid ||paperForm.topicType.$invalid">
+                                ng-disabled="paperForm.email.$invalid ||paperForm.topicName.$invalid ||paperForm.topicType.$invalid">
                             Save
                         </button>
                     </div>
