display agenda in well format in home.jsp and dashboard

--- a/src/main/webapp/app/components/dashboard/index.html
+++ b/src/main/webapp/app/components/dashboard/index.html
@@ -81,8 +81,7 @@
 
                             </div>
                             <div class="timeline-body">
-                                <p>
-                                    {{session.paper.agenda}}
+                                <p ng-bind-html="session.paper.agenda">
                                 </p>
                                 <br>
 
